--- a/0x01-shell_permissions.ipynb
+++ b/0x01-shell_permissions.ipynb
@@ -425,24 +425,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 530d68e] commit 1-listit1\n",
-      " 1 file changed, 54 insertions(+), 20 deletions(-)\n",
-      "Enumerating objects: 5, done.\n",
-      "Counting objects: 100% (5/5), done.\n",
+      "[main b9277cb] whoami\n",
+      " 3 files changed, 41 insertions(+), 80 deletions(-)\n",
+      " create mode 100755 0x01-shell_permissions/1-who_am_i\n",
+      "Enumerating objects: 10, done.\n",
+      "Counting objects: 100% (10/10), done.\n",
       "Delta compression using up to 12 threads\n",
-      "Compressing objects: 100% (3/3), done.\n",
-      "Writing objects: 100% (3/3), 533 bytes | 533.00 KiB/s, done.\n",
-      "Total 3 (delta 2), reused 0 (delta 0)\n",
+      "Compressing objects: 100% (4/4), done.\n",
+      "Writing objects: 100% (6/6), 985 bytes | 985.00 KiB/s, done.\n",
+      "Total 6 (delta 2), reused 0 (delta 0)\n",
       "remote: Resolving deltas: 100% (2/2), completed with 2 local objects.\u001b[K\n",
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   0645cde..530d68e  main -> main\n",
+      "   375e218..b9277cb  main -> main\n",
       "Branch 'main' set up to track remote branch 'main' from 'origin'.\n"
      ]
     }
@@ -450,7 +451,7 @@
    "source": [
     "\n",
     "!git add .\n",
-    "!git commit -m \"who\"\n",
+    "!git commit -m \"whoami\"\n",
     "!git push -u origin main"
    ]
   },
@@ -461,7 +462,7 @@
     "###\n",
     "---\n",
     "<center>\n",
-    "<h4> 2. There is no place like home </h4>\n",
+    "<h4> 2. Groups </h4>\n",
     "</center>\n",
     "\n",
     "---"
