--- a/0x01-shell_permissions.ipynb
+++ b/0x01-shell_permissions.ipynb
@@ -425,25 +425,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main b9277cb] whoami\n",
-      " 3 files changed, 41 insertions(+), 80 deletions(-)\n",
-      " create mode 100755 0x01-shell_permissions/1-who_am_i\n",
-      "Enumerating objects: 10, done.\n",
-      "Counting objects: 100% (10/10), done.\n",
+      "[main 8cb791d] whoami\n",
+      " 2 files changed, 14 insertions(+), 12 deletions(-)\n",
+      "Enumerating objects: 7, done.\n",
+      "Counting objects: 100% (7/7), done.\n",
       "Delta compression using up to 12 threads\n",
       "Compressing objects: 100% (4/4), done.\n",
-      "Writing objects: 100% (6/6), 985 bytes | 985.00 KiB/s, done.\n",
-      "Total 6 (delta 2), reused 0 (delta 0)\n",
+      "Writing objects: 100% (4/4), 527 bytes | 527.00 KiB/s, done.\n",
+      "Total 4 (delta 2), reused 0 (delta 0)\n",
       "remote: Resolving deltas: 100% (2/2), completed with 2 local objects.\u001b[K\n",
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   375e218..b9277cb  main -> main\n",
+      "   b9277cb..8cb791d  main -> main\n",
       "Branch 'main' set up to track remote branch 'main' from 'origin'.\n"
      ]
     }
@@ -472,69 +471,69 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Write a script that changes the working directory to the user’s home directory.\n",
-    "* You are not allowed to use any shell variables\n",
+    "#### Write a script that prints all the groups the current user is part of.\n",
     "\n",
     "```bash\n",
-    "\n",
-    "julien@ubuntu:/tmp$ pwd\n",
-    "/tmp\n",
-    "julien@ubuntu:/tmp$ echo $HOME\n",
-    "/home/julien\n",
-    "julien@ubuntu:/tmp$ source ./2-bring_me_home\n",
-    "julien@ubuntu:~$ pwd\n",
-    "/home/julien\n",
-    "julien@ubuntu:~$ \n",
+    "julien@ubuntu:/tmp/h$ ./2-groups\n",
+    "julien adm cdrom sudo dip plugdev lpadmin sambashare\n",
+    "julien@ubuntu:/tmp/h$ \n",
     "```\n",
     "\n",
     "\n",
     "#### Repo:\n",
     "* GitHub repository:   <code>alx-system_engineering-devops </code>\n",
-    "* Directory:   <code> 0x00-shell_basics </code>\n",
-    "* File:   <code> 2-bring_me_home </code>"
+    "* Directory:   <code> 0x01-shell_permissions </code>\n",
+    "* File:   <code> 2-groups</code>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing 0x01-shell_permissions/2-groups\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%file 0x01-shell_permissions/2-groups\n",
+    "#!/bin/bash\n",
+    "id -nG"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "# creating 0x00-shell_basics folder\n",
-    "\n",
-    "folder_path = r'/home/elkomy/alx-system_engineering-devops/0x00-shell_basics'\n",
-    "if not os.path.exists(folder_path):\n",
-    "    os.makedirs(folder_path)\n",
-    "\n",
-    "# Create 0-current_working_directory\n",
-    "file_path = os.path.join(folder_path, '2-bring_me_home')\n",
-    "with open(file_path, 'w') as file:\n",
-    "    file.write('#!/bin/bash\\ncd ~\\n')\n",
-    "    #file.write('#!/bin/bash\\ncd \"$HOME\"\\n')\n"
+    "!chmod u+x /home/elkomy/alx-system_engineering-devops/0x01-shell_permissions/2-groups"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "elkomy adm dialout cdrom floppy sudo audio dip video plugdev netdev\n"
+     ]
+    }
+   ],
    "source": [
-    "!chmod u+x /home/elkomy/alx-system_engineering-devops/0x00-shell_basics/2-bring_me_home"
+    "!source ./0x01-shell_permissions/2-groups"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!source ./0x00-shell_basics/2-bring_me_home"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -542,12 +541,12 @@
      "output_type": "stream",
      "text": [
       "#!/bin/bash\n",
-      "cd ~\n"
+      "id -nG\n"
      ]
     }
    ],
    "source": [
-    "!cat 0x00-shell_basics/2-bring_me_home"
+    "!cat 0x01-shell_permissions/2-groups"
    ]
   },
   {
@@ -576,7 +575,7 @@
    ],
    "source": [
     "!git add .\n",
-    "!git commit -m \"commit 2-bring_me_home\"\n",
+    "!git commit -m \"group\"\n",
     "!git push -u origin main"
    ]
   },
