chown betty: hello

--- a/0x01-shell_permissions.ipynb
+++ b/0x01-shell_permissions.ipynb
@@ -551,24 +551,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 3ebeef5] commit 2-bring_me_home\n",
-      " 1 file changed, 55 insertions(+), 27 deletions(-)\n",
-      "Enumerating objects: 5, done.\n",
-      "Counting objects: 100% (5/5), done.\n",
+      "[main 99867fe] group\n",
+      " 2 files changed, 46 insertions(+), 45 deletions(-)\n",
+      " create mode 100755 0x01-shell_permissions/2-groups\n",
+      "Enumerating objects: 8, done.\n",
+      "Counting objects: 100% (8/8), done.\n",
       "Delta compression using up to 12 threads\n",
-      "Compressing objects: 100% (3/3), done.\n",
-      "Writing objects: 100% (3/3), 599 bytes | 66.00 KiB/s, done.\n",
-      "Total 3 (delta 2), reused 0 (delta 0)\n",
+      "Compressing objects: 100% (4/4), done.\n",
+      "Writing objects: 100% (5/5), 895 bytes | 895.00 KiB/s, done.\n",
+      "Total 5 (delta 2), reused 0 (delta 0)\n",
       "remote: Resolving deltas: 100% (2/2), completed with 2 local objects.\u001b[K\n",
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   530d68e..3ebeef5  main -> main\n",
+      "   8cb791d..99867fe  main -> main\n",
       "Branch 'main' set up to track remote branch 'main' from 'origin'.\n"
      ]
     }
@@ -586,7 +587,7 @@
     "###\n",
     "---\n",
     "<center>\n",
-    "<h4> 3.The long format </h4>\n",
+    "<h4> 3.New owner </h4>\n",
     "</center>\n",
     "\n",
     "---"
@@ -596,59 +597,61 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Display current directory contents in a long format\n",
+    "#### Write a script that changes the owner of the file `hello` to the user `betty`.\n",
     "\n",
-    "#### Example:\n",
     "\n",
     "```bash\n",
-    "$ ./3-listfiles\n",
-    "total 32\n",
-    "-rwxr-xr-x@ 1 sylvain staff 18 Jan 25 00:19 0-current_working_directory\n",
-    "-rwxr-xr-x@ 1 sylvain staff 19 Jan 25 00:23 1-listit\n",
-    "-rwxr-xr-x@ 1 sylvain staff 18 Jan 25 00:29 2-bring_me_home\n",
-    "-rwxr-xr-x@ 1 sylvain staff 18 Jan 25 00:39 3-listfiles\n",
-    "$\n",
+    "julien@ubuntu:/tmp/h$ ls -l\n",
+    "total 4\n",
+    "-rwxrw-r-- 1 julien julien 30 Sep 20 14:23 3-new_owner\n",
+    "-rw-rw-r-- 1 julien julien  0 Sep 20 14:18 hello\n",
+    "julien@ubuntu:/tmp/h$ sudo ./3-new_owner \n",
+    "julien@ubuntu:/tmp/h$ ls -l\n",
+    "total 4\n",
+    "-rwxrw-r-- 1 julien julien 30 Sep 20 14:23 3-new_owner\n",
+    "-rw-rw-r-- 1 betty  julien  0 Sep 20 14:18 hello\n",
+    "julien@ubuntu:/tmp/h$\n",
     "```\n",
     "\n",
     "\n",
     "#### Repo:\n",
     "* GitHub repository: `alx-system_engineering-devops`\n",
-    "* Directory: `0x00-shell_basics`\n",
-    "* File: `3-listfiles`"
+    "* Directory: `0x01-shell_permissions`\n",
+    "* File: `3-new_owner`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting /home/elkomy/alx-system_engineering-devops/0x00-shell_basics/3-listfiles\n"
+      "Writing 0x01-shell_permissions/3-new_owner\n"
      ]
     }
    ],
    "source": [
-    "%%file /home/elkomy/alx-system_engineering-devops/0x00-shell_basics/3-listfiles\n",
+    "%%file 0x01-shell_permissions/3-new_owner\n",
     "#!/bin/bash\n",
-    "ls -l"
+    "chown betty: hello"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "%%bash\n",
-    "chmod u+x /home/elkomy/alx-system_engineering-devops/0x00-shell_basics/3-listfiles"
+    "chmod u+x /home/elkomy/alx-system_engineering-devops/0x01-shell_permissions/3-new_owner"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -656,32 +659,29 @@
      "output_type": "stream",
      "text": [
       "#!/bin/bash\n",
-      "ls -l\n"
+      "chown betty: hello\n"
      ]
     }
    ],
    "source": [
-    "!cat 0x00-shell_basics/3-listfiles"
+    "!cat 0x01-shell_permissions/3-new_owner"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total 40\n",
-      "drwxr-xr-x 2 elkomy elkomy  4096 Feb 11 00:26 0x00-shell_basics\n",
-      "-rw-r--r-- 1 elkomy elkomy    32 Feb 23 23:32 README.md\n",
-      "-rw-r--r-- 1 elkomy elkomy 29895 Feb 24 21:25 alx-system_engineering-devops.ipynb\n"
+      "chown: invalid spec: ‘betty:’\n"
      ]
     }
    ],
    "source": [
-    "!./0x00-shell_basics/3-listfiles"
+    "!./0x01-shell_permissions/3-new_owner"
    ]
   },
   {
@@ -710,7 +710,7 @@
    ],
    "source": [
     "!git add .\n",
-    "!git commit -m \"commit 3-listfiles\"\n",
+    "!git commit -m \"chown betty: hello\"\n",
     "!git push -u origin main"
    ]
   },
