--- a/0x01-shell_permissions.ipynb
+++ b/0x01-shell_permissions.ipynb
@@ -686,24 +686,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 154bd60] commit 3-listfiles\n",
-      " 1 file changed, 50 insertions(+), 13 deletions(-)\n",
-      "Enumerating objects: 5, done.\n",
-      "Counting objects: 100% (5/5), done.\n",
+      "[main b1d5c23] chown betty: hello\n",
+      " 2 files changed, 39 insertions(+), 37 deletions(-)\n",
+      " create mode 100755 0x01-shell_permissions/3-new_owner\n",
+      "Enumerating objects: 8, done.\n",
+      "Counting objects: 100% (8/8), done.\n",
       "Delta compression using up to 12 threads\n",
-      "Compressing objects: 100% (3/3), done.\n",
-      "Writing objects: 100% (3/3), 524 bytes | 524.00 KiB/s, done.\n",
-      "Total 3 (delta 2), reused 0 (delta 0)\n",
-      "remote: Resolving deltas: 100% (2/2), completed with 2 local objects.\u001b[K\n",
+      "Compressing objects: 100% (4/4), done.\n",
+      "Writing objects: 100% (5/5), 890 bytes | 296.00 KiB/s, done.\n",
+      "Total 5 (delta 3), reused 0 (delta 0)\n",
+      "remote: Resolving deltas: 100% (3/3), completed with 3 local objects.\u001b[K\n",
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   3ebeef5..154bd60  main -> main\n",
+      "   99867fe..b1d5c23  main -> main\n",
       "Branch 'main' set up to track remote branch 'main' from 'origin'.\n"
      ]
     }
@@ -723,7 +724,7 @@
     "\n",
     "---\n",
     "<center>\n",
-    "<h4> 4. Hidden files </h4>\n",
+    "<h4> 4. Empty! </h4>\n",
     "</center>\n",
     "\n",
     "---"
@@ -733,60 +734,46 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Display current directory contents, including hidden files (starting with `.`). Use the long format.\n",
+    "#### Write a script that creates an empty file called `hello`.\n",
     "\n",
-    "Example:\n",
-    "\n",
-    "```bash\n",
-    "$ ./4-listmorefiles\n",
-    "total 32\n",
-    "drwxr-xr-x@ 6 sylvain staff 204 Jan 25 00:29 .\n",
-    "drwxr-xr-x@ 43 sylvain staff 1462 Jan 25 00:19 ..\n",
-    "-rwxr-xr-x@ 1 sylvain staff 18 Jan 25 00:19 0-current_working_directory\n",
-    "-rwxr-xr-x@ 1 sylvain staff 19 Jan 25 00:23 1-listit\n",
-    "-rwxr-xr-x@ 1 sylvain staff 18 Jan 25 00:29 2-bring_me_home\n",
-    "-rwxr-xr-x@ 1 sylvain staff 18 Jan 25 00:39 3-listfiles\n",
-    "-rwxr-xr-x@ 1 sylvain staff 18 Jan 25 00:41 4-listmorefiles\n",
-    "$\n",
-    "```\n",
     "\n",
     "#### Repo:\n",
     "* GitHub repository: `alx-system_engineering-devops`\n",
-    "* Directory: `0x00-shell_basics`\n",
-    "* File: `4-listmorefiles`"
+    "* Directory: `0x01-shell_permissions`\n",
+    "* File: `4-empty`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting /home/elkomy/alx-system_engineering-devops/0x00-shell_basics/4-listmorefiles\n"
+      "Writing 0x01-shell_permissions/4-empty\n"
      ]
     }
    ],
    "source": [
-    "%%file /home/elkomy/alx-system_engineering-devops/0x00-shell_basics/4-listmorefiles\n",
+    "%%file \n",
     "#!/bin/bash\n",
-    "ls -la"
+    "touch hello"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "!chmod u+x /home/elkomy/alx-system_engineering-devops/0x00-shell_basics/4-listmorefiles"
+    "!chmod u+x 0x01-shell_permissions/4-empty"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -794,36 +781,21 @@
      "output_type": "stream",
      "text": [
       "#!/bin/bash\n",
-      "ls -la\n"
+      "touch hello\n"
      ]
     }
    ],
    "source": [
-    "!cat /home/elkomy/alx-system_engineering-devops/0x00-shell_basics/4-listmorefiles"
+    "!cat 0x01-shell_permissions/4-empty"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "total 56\n",
-      "drwxr-xr-x  4 elkomy elkomy  4096 Feb 11 00:26 .\n",
-      "drwxr-xr-x 17 elkomy elkomy  4096 Feb 24 17:50 ..\n",
-      "drwxr-xr-x  8 elkomy elkomy  4096 Feb 24 21:40 .git\n",
-      "-rw-r--r--  1 elkomy elkomy    11 Feb 10 18:55 .gitignore\n",
-      "drwxr-xr-x  2 elkomy elkomy  4096 Feb 11 00:26 0x00-shell_basics\n",
-      "-rw-r--r--  1 elkomy elkomy   425 Feb 24 21:50 README.md\n",
-      "-rw-r--r--  1 elkomy elkomy 32028 Feb 24 21:52 alx-system_engineering-devops.ipynb\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!./0x00-shell_basics/4-listmorefiles"
+    "!./0x01-shell_permissions/4-empty"
    ]
   },
   {
@@ -852,7 +824,7 @@
    ],
    "source": [
     "!git add .\n",
-    "!git commit -m \"committing the 4-listmorefiles\"\n",
+    "!git commit -m \"Hello\"\n",
     "!git push -u origin main"
    ]
   },
