--- a/0x01-shell_permissions.ipynb
+++ b/0x01-shell_permissions.ipynb
@@ -800,24 +800,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 07b8252] committing the 4-listmorefiles\n",
-      " 2 files changed, 59 insertions(+), 22 deletions(-)\n",
-      "Enumerating objects: 7, done.\n",
-      "Counting objects: 100% (7/7), done.\n",
+      "[main 9f7a3ea] Hello\n",
+      " 3 files changed, 30 insertions(+), 56 deletions(-)\n",
+      " create mode 100755 0x01-shell_permissions/4-empty\n",
+      " create mode 100644 hello\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enumerating objects: 8, done.\n",
+      "Counting objects: 100% (8/8), done.\n",
       "Delta compression using up to 12 threads\n",
       "Compressing objects: 100% (4/4), done.\n",
-      "Writing objects: 100% (4/4), 889 bytes | 889.00 KiB/s, done.\n",
-      "Total 4 (delta 2), reused 0 (delta 0)\n",
-      "remote: Resolving deltas: 100% (2/2), completed with 2 local objects.\u001b[K\n",
+      "Writing objects: 100% (5/5), 795 bytes | 795.00 KiB/s, done.\n",
+      "Total 5 (delta 3), reused 0 (delta 0)\n",
+      "remote: Resolving deltas: 100% (3/3), completed with 3 local objects.\u001b[K\n",
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   e4c0f50..07b8252  main -> main\n",
+      "   b1d5c23..9f7a3ea  main -> main\n",
       "Branch 'main' set up to track remote branch 'main' from 'origin'.\n"
      ]
     }
@@ -830,28 +838,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "total 56\n",
-      "drwxr-xr-x  4 elkomy elkomy  4096 Feb 11 00:26 .\n",
-      "drwxr-xr-x 17 elkomy elkomy  4096 Feb 24 17:50 ..\n",
-      "drwxr-xr-x  8 elkomy elkomy  4096 Feb 24 21:52 .git\n",
-      "-rw-r--r--  1 elkomy elkomy    11 Feb 10 18:55 .gitignore\n",
-      "drwxr-xr-x  2 elkomy elkomy  4096 Feb 11 00:26 0x00-shell_basics\n",
-      "-rw-r--r--  1 elkomy elkomy   425 Feb 24 21:50 README.md\n",
-      "-rw-r--r--  1 elkomy elkomy 32553 Feb 24 21:52 alx-system_engineering-devops.ipynb\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%bash\n",
-    "./0x00-shell_basics/4-listmorefiles"
+    "./0x01-shell_permissions/4-empty"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -862,7 +862,7 @@
     "\n",
     "---\n",
     "<center>\n",
-    "<h4> 5. I love numbers </h4>\n",
+    "<h4> 5. Execute</h4>\n",
     "</center>\n",
     "\n",
     "---"
