0x01-shell_permissions/5-execute

--- a/0x01-shell_permissions.ipynb
+++ b/0x01-shell_permissions.ipynb
@@ -800,32 +800,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main 9f7a3ea] Hello\n",
-      " 3 files changed, 30 insertions(+), 56 deletions(-)\n",
-      " create mode 100755 0x01-shell_permissions/4-empty\n",
-      " create mode 100644 hello\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Enumerating objects: 8, done.\n",
-      "Counting objects: 100% (8/8), done.\n",
+      "[main f040ad5] Hello\n",
+      " 1 file changed, 28 insertions(+), 28 deletions(-)\n",
+      "Enumerating objects: 5, done.\n",
+      "Counting objects: 100% (5/5), done.\n",
       "Delta compression using up to 12 threads\n",
-      "Compressing objects: 100% (4/4), done.\n",
-      "Writing objects: 100% (5/5), 795 bytes | 795.00 KiB/s, done.\n",
-      "Total 5 (delta 3), reused 0 (delta 0)\n",
-      "remote: Resolving deltas: 100% (3/3), completed with 3 local objects.\u001b[K\n",
+      "Compressing objects: 100% (3/3), done.\n",
+      "Writing objects: 100% (3/3), 473 bytes | 473.00 KiB/s, done.\n",
+      "Total 3 (delta 2), reused 0 (delta 0)\n",
+      "remote: Resolving deltas: 100% (2/2), completed with 2 local objects.\u001b[K\n",
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   b1d5c23..9f7a3ea  main -> main\n",
+      "   9f7a3ea..f040ad5  main -> main\n",
       "Branch 'main' set up to track remote branch 'main' from 'origin'.\n"
      ]
     }
@@ -872,76 +864,61 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Display Current directory contents.\n",
-    "* Long format\n",
-    "* With user and group IDs displayed numerically\n",
-    "* and hidden files (starting with .)\n",
+    "##### Write a script that adds execute permission to the owner of the file hello.\n",
     "\n",
-    "##### Example:\n",
+    "* The file hello will be in the working directory\n",
+    "\n",
     "\n",
     "```bash\n",
-    "$ ./5-listfilesdigitonly\n",
-    "total 32\n",
-    "drwxr-xr-x@ 6 501 20 204 Jan 25 00:29 .\n",
-    "drwxr-xr-x@ 43 501 20 1462 Jan 25 00:19 ..\n",
-    "-rwxr-xr-x@ 1 501 20 18 Jan 25 00:19 0-current_working_directory\n",
-    "-rwxr-xr-x@ 1 501 20 18 Jan 25 00:23 1-listfiles\n",
-    "-rwxr-xr-x@ 1 501 20 19 Jan 25 00:29 2-bring_me_home\n",
-    "-rwxr-xr-x@ 1 501 20 20 Jan 25 00:39 3-listfiles\n",
-    "-rwxr-xr-x@ 1 501 20 18 Jan 25 00:41 4-listmorefiles\n",
-    "-rwxr-xr-x@ 1 501 20 18 Jan 25 00:43 5-listfilesdigitonly\n",
+    "julien@ubuntu:/tmp/h$ ls -l\n",
+    "total 8\n",
+    "-rwxrw-r-- 1 julien julien 28 Sep 20 14:26 5-execute\n",
+    "-rw-rw-r-- 1 julien julien 23 Sep 20 14:25 hello\n",
+    "julien@ubuntu:/tmp/h$ ./hello\n",
+    "bash: ./hello: Permission denied\n",
+    "julien@ubuntu:/tmp/h$ ./5-execute \n",
+    "julien@ubuntu:/tmp/h$ ls -l\n",
+    "total 8\n",
+    "-rwxrw-r-- 1 julien julien 28 Sep 20 14:26 5-execute\n",
+    "-rwxrw-r-- 1 julien julien 23 Sep 20 14:25 hello\n",
+    "julien@ubuntu:/tmp/h$ \n",
     "```\n",
     "\n",
     "##### Repo:\n",
     "\n",
     "* GitHub repository: `alx-system_engineering-devops`\n",
-    "* Directory: `0x00-shell_basics`\n",
-    "* File: `5-listfilesdigitonly`"
+    "* Directory: `0x01-shell_permissions`\n",
+    "* File: `5-execute`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting 0x00-shell_basics/5-listfilesdigitonly\n"
+      "Writing 0x01-shell_permissions/5-execute\n"
      ]
     }
    ],
    "source": [
-    "%%file 0x00-shell_basics/5-listfilesdigitonly\n",
+    "%%file 0x01-shell_permissions/5-execute\n",
     "#!/bin/bash\n",
-    "ls -lan"
+    "chmod u+x hello"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "total 56\n",
-      "drwxr-xr-x  4 1000 1000  4096 Feb 11 00:26 .\n",
-      "drwxr-xr-x 17 1000 1000  4096 Feb 24 17:50 ..\n",
-      "drwxr-xr-x  8 1000 1000  4096 Feb 24 21:52 .git\n",
-      "-rw-r--r--  1 1000 1000    11 Feb 10 18:55 .gitignore\n",
-      "drwxr-xr-x  2 1000 1000  4096 Feb 11 00:26 0x00-shell_basics\n",
-      "-rw-r--r--  1 1000 1000   460 Feb 24 21:55 README.md\n",
-      "-rw-r--r--  1 1000 1000 32492 Feb 24 22:00 alx-system_engineering-devops.ipynb\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%bash\n",
-    "chmod u+x 0x00-shell_basics/5-listfilesdigitonly\n",
-    "./0x00-shell_basics/5-listfilesdigitonly"
+    "chmod u+x 0x01-shell_permissions/5-execute\n",
+    "./0x01-shell_permissions/5-execute"
    ]
   },
   {
@@ -969,7 +946,7 @@
    "source": [
     "%%bash\n",
     "git add .\n",
-    "git commit -m \"5-listfilesdigitonly\"\n",
+    "git commit -m \"0x01-shell_permissions/5-execute\"\n",
     "git push"
    ]
   },
