--- a/0x01-shell_permissions.ipynb
+++ b/0x01-shell_permissions.ipynb
@@ -923,15 +923,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main ff892e3] 5-listfilesdigitonly\n",
-      " 2 files changed, 27 insertions(+), 33 deletions(-)\n"
+      "[main 3b2eab6] 0x01-shell_permissions/5-execute\n",
+      " 3 files changed, 38 insertions(+), 59 deletions(-)\n",
+      " create mode 100755 0x01-shell_permissions/5-execute\n",
+      " mode change 100644 => 100755 hello\n"
      ]
     },
     {
@@ -939,7 +941,7 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   07b8252..ff892e3  main -> main\n"
+      "   f040ad5..3b2eab6  main -> main\n"
      ]
     }
    ],
@@ -959,7 +961,7 @@
     "\n",
     "---\n",
     "<center>\n",
-    "<h4> 6.Welcome </h4>\n",
+    "<h4> 6.Multiple permissions </h4>\n",
     "</center>\n",
     "\n",
     "---"
@@ -969,76 +971,76 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Create a script that creates a directory named my_first_directory in the /tmp/ directory.\n",
+    "##### Write a script that adds execute permission to the owner and the group owner, and read permission to other users, to the file `hello`.\n",
     "\n",
-    "##### Example:\n",
+    "    * The file `hello` will be in the working directory\n",
+    "\n",
     "```bash\n",
-    "$ ./6-firstdirectory\n",
-    "$ file /tmp/my_first_directory/\n",
-    "/tmp/my_first_directory/: directory\n",
-    "$\n",
+    "julien@ubuntu:/tmp/h$ ls -l\n",
+    "total 8\n",
+    "-rwxrw-r-- 1 julien julien 36 Sep 20 14:31 6-multiple_permissions\n",
+    "-r--r----- 1 julien julien 23 Sep 20 14:25 hello\n",
+    "julien@ubuntu:/tmp/h$ ./6-multiple_permissions \n",
+    "julien@ubuntu:/tmp/h$ ls -l\n",
+    "total 8\n",
+    "-rwxrw-r-- 1 julien julien 36 Sep 20 14:31 6-multiple_permissions\n",
+    "-r-xr-xr-- 1 julien julien 23 Sep 20 14:25 hello\n",
+    "julien@ubuntu:/tmp/h$ \n",
+    "\n",
     "```\n",
     "\n",
     "#### Repo:\n",
     "\n",
     "* GitHub repository: `alx-system_engineering-devops`\n",
-    "* Directory: `0x00-shell_basics`\n",
-    "* File: `6-firstdirectory`"
+    "* Directory: `0x01-shell_permissions`\n",
+    "* File: `6-multiple_permissions`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing 0x00-shell_basics/6-firstdirectory\n"
+      "Writing 0x01-shell_permissions/6-multiple_permissions\n"
      ]
     }
    ],
    "source": [
-    "%%file 0x00-shell_basics/6-firstdirectory\n",
+    "%%file 0x01-shell_permissions/6-multiple_permissions\n",
     "#!/bin/bash\n",
-    "mkdir /tmp/my_first_directory"
+    "chmod u+x,g+x hello"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "mkdir: cannot create directory ‘/tmp/my_first_directory’: File exists\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "my_first_directory\n",
-      "pyright-1478-F4WFlu26OPzg\n",
-      "pyright-1478-eJVpJeSwjRUD\n",
-      "pyright-1478-gbqzZG7Uvn5B\n",
-      "pyright-1478-y01yOzXMpK1B\n",
-      "python-languageserver-cancellation\n",
-      "snap-private-tmp\n",
-      "systemd-private-1797bdebbffc4ba4ad9aaa81ae87ebf6-ModemManager.service-XpmyVf\n",
-      "systemd-private-1797bdebbffc4ba4ad9aaa81ae87ebf6-systemd-logind.service-EaPdgj\n",
-      "systemd-private-1797bdebbffc4ba4ad9aaa81ae87ebf6-systemd-resolved.service-5hEDYe\n"
+      "total 164\n",
+      "drwxr-xr-x 2 elkomy elkomy  4096 Mar  2 14:09 0x00-shell_basics\n",
+      "-rw-r--r-- 1 elkomy elkomy 75098 Mar  2 15:54 0x00-shell_basics.ipynb\n",
+      "drwxr-xr-x 2 elkomy elkomy  4096 Mar  9 18:26 0x01-shell_permissions\n",
+      "-rw-r--r-- 1 elkomy elkomy 71862 Mar  9 18:50 0x01-shell_permissions.ipynb\n",
+      "-rw-r--r-- 1 elkomy elkomy   108 Mar  2 16:08 README.md\n",
+      "-rwxr-xr-- 1 elkomy elkomy     0 Mar  9 01:18 hello\n",
+      "-rw-r--r-- 1 elkomy elkomy   688 Mar  2 14:52 school.mgc\n",
+      "-rw-r--r-- 1 elkomy elkomy     0 Feb 28 01:08 test.HTML\n"
      ]
     }
    ],
    "source": [
     "%%bash\n",
-    "chmod u+x 0x00-shell_basics/6-firstdirectory\n",
-    "./0x00-shell_basics/6-firstdirectory\n",
-    "ls /tmp/"
+    "chmod u+x 0x01-shell_permissions/6-multiple_permissions\n",
+    "./0x01-shell_permissions/6-multiple_permissions\n",
+    "ls -l\n"
    ]
   },
   {
@@ -1067,7 +1069,7 @@
    "source": [
     "%%bash\n",
     "git add .\n",
-    "git commit -m \"6-firstdirectory\"\n",
+    "git commit -m \"6-multiple_per\"\n",
     "git push"
    ]
   },
