--- a/0x01-shell_permissions.ipynb
+++ b/0x01-shell_permissions.ipynb
@@ -1045,16 +1045,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main f31a154] 6-firstdirectory\n",
-      " 3 files changed, 53 insertions(+), 25 deletions(-)\n",
-      " create mode 100755 0x00-shell_basics/6-firstdirectory\n"
+      "[main 3c9fdc1] 6-multiple_permissions\n",
+      " 2 files changed, 43 insertions(+), 39 deletions(-)\n",
+      " create mode 100755 0x01-shell_permissions/6-multiple_permissions\n"
      ]
     },
     {
@@ -1062,14 +1062,14 @@
      "output_type": "stream",
      "text": [
       "To https://github.com/elkomysara/alx-system_engineering-devops.git\n",
-      "   ff892e3..f31a154  main -> main\n"
+      "   3b2eab6..3c9fdc1  main -> main\n"
      ]
     }
    ],
    "source": [
     "%%bash\n",
     "git add .\n",
-    "git commit -m \"6-multiple_per\"\n",
+    "git commit -m \"6-multiple_permissions\"\n",
     "git push"
    ]
   },
@@ -1082,7 +1082,7 @@
     "\n",
     "---\n",
     "<center>\n",
-    "<h4> 7.Betty in my first directory </h4>\n",
+    "<h4> 7.Everybody! </h4>\n",
     "</center>\n",
     "\n",
     "---"
@@ -1092,75 +1092,76 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Move the file betty from /tmp/ to /tmp/my_first_directory.\n",
+    "##### Write a script that adds execution permission to the owner, the group owner and the other users, to the file hello\n",
     "\n",
-    "##### Example:\n",
+    "    * The file hello will be in the working directory\n",
+    "    * You are not allowed to use commas for this script\n",
+    "\n",
     "```bash\n",
-    "$ ./7-movethatfile\n",
-    "$ ls /tmp/my_first_directory/\n",
-    "betty\n",
-    "$\n",
+    "julien@ubuntu:/tmp/h$ ls -l\n",
+    "total 8\n",
+    "-rwxrw-r-- 1 julien julien 28 Sep 20 14:35 7-everybody\n",
+    "-rw-r----- 1 julien julien 23 Sep 20 14:25 hello\n",
+    "julien@ubuntu:/tmp/h$ ./7-everybody \n",
+    "julien@ubuntu:/tmp/h$ ls -l\n",
+    "total 8\n",
+    "-rwxrw-r-- 1 julien julien 28 Sep 20 14:35 7-everybody\n",
+    "-rwxr-x--x 1 julien julien 23 Sep 20 14:25 hello\n",
+    "julien@ubuntu:/tmp/h$ \n",
     "```\n",
     "\n",
     "#### Repo:\n",
     "\n",
     "* GitHub repository: `alx-system_engineering-devops`\n",
-    "* Directory: `0x00-shell_basics`\n",
-    "* File: `7-movethatfile`"
+    "* Directory: `0x01-shell_permissions`\n",
+    "* File: `7-everybody`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing 0x00-shell_basics/7-movethatfile\n"
+      "Writing 0x01-shell_permissions/7-everybody\n"
      ]
     }
    ],
    "source": [
-    "%%file 0x00-shell_basics/7-movethatfile\n",
+    "%%file 0x01-shell_permissions/7-everybody\n",
     "#!/bin/bash\n",
-    "mv /tmp/betty /tmp/my_first_directory"
+    "chmod +x hello"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "mv: cannot stat '/tmp/betty': No such file or directory\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "my_first_directory\n",
-      "pyright-9863-3yBGUfZlxDqq\n",
-      "pyright-9863-9QzMys6VU6ZY\n",
-      "pyright-9863-gyFPUbndjCI5\n",
-      "python-languageserver-cancellation\n",
-      "snap-private-tmp\n",
-      "systemd-private-959f346fd803484a9825f3b0d492c837-ModemManager.service-2xfSxf\n",
-      "systemd-private-959f346fd803484a9825f3b0d492c837-systemd-logind.service-vJoCkf\n",
-      "systemd-private-959f346fd803484a9825f3b0d492c837-systemd-resolved.service-n0ZkLf\n"
+      "total 164\n",
+      "drwxr-xr-x 2 elkomy elkomy  4096 Mar  2 14:09 0x00-shell_basics\n",
+      "-rw-r--r-- 1 elkomy elkomy 75098 Mar  2 15:54 0x00-shell_basics.ipynb\n",
+      "drwxr-xr-x 2 elkomy elkomy  4096 Mar  9 19:34 0x01-shell_permissions\n",
+      "-rw-r--r-- 1 elkomy elkomy 72274 Mar  9 19:34 0x01-shell_permissions.ipynb\n",
+      "-rw-r--r-- 1 elkomy elkomy   108 Mar  2 16:08 README.md\n",
+      "-rwxr-xr-x 1 elkomy elkomy     0 Mar  9 01:18 hello\n",
+      "-rw-r--r-- 1 elkomy elkomy   688 Mar  2 14:52 school.mgc\n",
+      "-rw-r--r-- 1 elkomy elkomy     0 Feb 28 01:08 test.HTML\n"
      ]
     }
    ],
    "source": [
     "%%bash\n",
-    "chmod u+x 0x00-shell_basics/7-movethatfile\n",
-    "./0x00-shell_basics/7-movethatfile\n",
-    "ls /tmp/"
+    "chmod u+x 0x01-shell_permissions/7-everybody\n",
+    "./0x01-shell_permissions/7-everybody\n",
+    "ls -l"
    ]
   },
   {
